Sync: Automated sync from main to public branch.

--- a/image/requirements.txt
+++ b/image/requirements.txt
@@ -1,5 +1,6 @@
 ansible-lint
 ansible-lint-junit
+cryptography
 defusedxml
 dnspython
 docker
@@ -10,6 +11,7 @@ hvac
 netaddr
 passlib
 py
+pyopenssl
 pyVim
 pyVmomi
 pytest
