--- a/image/requirements.txt
+++ b/image/requirements.txt
@@ -1,24 +1,27 @@
-ansible-lint
+#ansible-lint
+ansible-lint==25.12.2
 ansible-lint-junit
 cryptography
 defusedxml
 dnspython
 docker
 edgegrid-python
+hvac
 jmespath
 kubernetes
-hvac
 netaddr
 passlib
 py
-pyopenssl
 pyVim
 pyVmomi
+pycurl
+pyopenssl
 pytest
 pytest-parallel
 pytest-shell-utilities
 pytest-testinfra
 python-dateutil
+python-hcl2
 python-ldap
 pytz
 pywinrm
